--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
             <version>2.5.14.1</version>
         </dependency>
         <!--sqlite的jar包-->
-        <!--<dependency>-->
-        <!--<groupId>org.xerial</groupId>-->
-        <!--<artifactId>sqlite-jdbc</artifactId>-->
-        <!--<version>3.21.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.21.0</version>
+        </dependency>
         <!--org.json的jar包-->
         <dependency>
             <groupId>org.json</groupId>
